test/testdata/list/index_negative_error.lox
var list = [];
list[-1]; // error: index (-1) must not be negative
